modificando el html y css

--- a/index.html
+++ b/index.html
@@ -161,44 +161,18 @@
 
     <!--==================== PRODUCTS ====================-->
     <section class="products" id="products">
-      <div class="products__container container">
-        <ul class="products__filters">
-          <li class="products__item products__line" data-filter="all">
-            <h3 class="products__title">
-              Mostrar todo
-            </h3>
-            <span class="products__stock">
-              Mostrar todos los productos
-            </span>
-          </li>
 
-          <li class="products__item products__line active-product" data-filter=".procesadores">
-            <h3 class="products__title">
-              procesadores
-            </h3>
-            <span class="products__stock">
-              3 productos
-            </span>
-          </li>
+      <div class="producs--info-description">
+        <h3 class="products__title">
+          Componentes gaming
+        </h3>
+        <span class="products__stock">
+          Los componentes mas fundamentales para empezar con tu pc gaming.
+        </span>
 
-          <li class="products__item products__line" data-filter=".placa-madre">
-            <h3 class="products__title">
-              Placa madre
-            </h3>
-            <span class="products__stock">
-              4 productos
-            </span>
-          </li>
 
-          <li class="products__item" data-filter=".tarjetas-graficas">
-            <h3 class="products__title">
-              Tarjetas Graficas
-            </h3>
-            <span class="products__stock">
-              4 productos
-            </span>
-          </li>
-        </ul>
+
+
 
         <div class="products__content grid" id="products__content">
 
