arreglando algunos errores

--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
         <h3 class="products__title">
           Componentes gaming
         </h3>
-        <span class="products__stock">
+        <p class="products__stock">
           Los componentes mas fundamentales para empezar con tu pc gaming.
-        </span>
+        </p>
 
 
 
